feat: incrementado o Jasypt, e properties de dev

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 # MySQL
 spring.datasource.url 				= 	jdbc:mysql://localhost:3306/sistemainformacao?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username 			= 	root
-spring.datasource.password 			= 	tr31n@m3nt.0
+spring.datasource.password 			= 	ENC(u9Q+NPhsvFd0qSk1P4VH9JhmmMofLQod)
 spring.datasource.driver-class-name	=	com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform		=	org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto		=	update
 spring.messages.basename			=	validation
-
+jasypt.encryptor.password			=   SimplePassword
 
 #exibe os comando SQL
 spring.jpa.properties.hibernate.show_sql 			= 	true
